--- a/accounts/templates/signin.html
+++ b/accounts/templates/signin.html
@@ -8,7 +8,17 @@
 	Login - Perfect Cushion Store
 {% endblock %}
 {% block content %}
-	<div class="container">
+
+<link rel="stylesheet" href="{% static 'css/home.css' %}" />
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="{% static 'css/all.css' %}" />
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+	<div class="container pb-4 mb-4">
 		<br>
 		<h1 class="my_title text-center">Login or Create a New Account</h1>
 		<br>
