--- a/dashboard/templates/dashboard/category_delete.html
+++ b/dashboard/templates/dashboard/category_delete.html
@@ -8,7 +8,7 @@
 {% load static %} 
 {% block metadescription %} 
 {%endblock %} 
-{% block title %} HolinessSingles {% endblock %} 
+{% block title %} The Graphics House {% endblock %} 
 {% load crispy_forms_tags %}
 
 {% block content%}
