--- a/dashboard/templates/dashboard/main.html
+++ b/dashboard/templates/dashboard/main.html
@@ -2,7 +2,7 @@
 {% load static %} 
 {% block metadescription %} 
 {%endblock %} 
-{% block title %} HolinessSingles {% endblock %} 
+{% block title %} The Graphics House {% endblock %} 
 {% block content%}
 
 <div class="content mobileContainer">
