--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -11,7 +11,7 @@
 
 		<section class="container footerAllItems">
 
-			<a class="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
+			<a class="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px; border-radius: 10px;" src="{% static 'images/footerLogo.png' %}" alt="Online Cushion Store"></a>
 			<div class="links">
 			 <a class="link" href="#">Home</a>
 			 <a class="link" href="#">About</a>
@@ -21,7 +21,7 @@
 		</section>
 				<div class="copyright container">
 
-								<p class="text-center copyright-text">© 2021 HolinessSingles. All rights Reserved</p>
+								<p class="text-center copyright-text">© 2021 The Graphics House. All rights Reserved</p>
 
 							</div>
 		
