--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -180,8 +180,9 @@ margin-top: 4.7vh;
 </style>
 
 
+
 <!-- -==========================================HEADER========================================== -->
-<header style="display: block; position: relative; background-color: white;" class=" ">
+<header style="display: block; position: relative; background-color: #FCE1C7;" class=" ">
 
   
     <button data-toggle="modal" data-target="#exampleModal" id="buttonHeaderID"
@@ -195,7 +196,7 @@ margin-top: 4.7vh;
          SUBSCRIBE
      </button>
      <div style=" text-align: center; " >
-        <a style=""  id="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
+        <a style=""  id="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/graphicslogo.png' %}" alt="logo"></a>
      </div>
      </div>
   </header>
