--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -22,14 +22,14 @@
   }
 
   .t:hover {
-    color: #c92020 !important;
+    color: #2179cc !important;
   }
 
   .t {
     color: black !important;
     font-family: Helvetica !important;
     font-size: 13px !important;
-    font-weight: 500 !important;
+  
   }
 
   #searchIconMobile {
@@ -60,7 +60,7 @@
     border-bottom: #eeeeee 1px solid; */
     padding: 0 !important;
     background-color: #f4f5f5;
-  " id="navbarMain" class="sticky-top navbar navbar-expand-lg">
+  " id="navbarMain" class="sticky-top navbar navbar-expand-lg ">
   <!-- <nav   style=" background-color: #c92020;"  id="navbarMain" class="navbar navbar-expand-lg  border-bottom "> -->
   <button style="" id="hamburger" class="navbar-toggler" type="button" data-bs-toggle="collapse"
     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,25 +69,38 @@
   <!-- IMAGEL LINK -->
   <a id="logoNavbar" class="navbar-brand mx-auto ml-3" href="{% url 'website:home' %}">
     <!-- IMAGE -->
-    <img class="mx-auto" style="width: 170px" src="{% static 'images/HS.png' %}" alt="Online Cushion Store" /></a>
+    <img class="mx-auto" style="width: 170px" src="{% static 'images/graphicslogo.png' %}" alt="Online Cushion Store" /></a>
   <a class="navbar-brand" href="#"><img src="" /></a>
   <!-- SEARCH ICON -->
   <i style="display: none; margin-right: 2vw" id="searchIconMobile" class="fas fa-search text-dark"></i>
   <!-- COLLAPSER -->
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul id="navbarContent" class="navbar-nav mx-auto">
+      {% if links %}
       {%for link in links%}
       <li class="nav-item text-center text-bold navers">
         <a style="color: black" href="{% url 'website:category_detail' link.slug %}" class="text-white t"
           aria-current="page">{{link.name}}</a>
       </li>
       {%endfor%}
-      <!-- <li class="nav-item text-center text-bold navers">
-            <a style="color: black;" href="{% url 'dashboard:main' %}"   class="text-white t " aria-current="page" >ADMIN PANEL</a> 
-                 </li>  -->
+      {% endif %}
+
+      {% if request.user.groups.all.0.name == "Admin" %}
+      <li class="nav-item text-center text-bold navers">
+        <a style="color: black;" href="{% url 'dashboard:main' %}"   class="badge text-white bg-secondary" aria-current="page" >ADMIN PANEL</a> 
+             </li> 
+             {%endif%}
+      
+                 {% if user.is_authenticated  %}
+
+                 <li><a class="badge badge-info" href="{% url 'signout' %}">Sign Out <i class="fas fa-user-plus"></i></a></li>
+                 {% else %}
+
+                 <li><a class="badge badge-info" href="{% url 'signin' %}">Sign In <i class="fas fa-user-plus"></i></a></li>
+                 {% endif %}
     </ul>
-    <!-- <a href="{% url 'signin' %}">Sign Up <i class="fas fa-user-plus"></i></a>
-   -->
+   
+  
   </div>
   <i style="margin-right: 2vw" id="searchIconMobile2" class="fas fa-search text-dark"></i>
 </nav>
