--- a/website/templates/website/category.html
+++ b/website/templates/website/category.html
@@ -4,14 +4,14 @@
 	{% if category %}
 		{{ category.description|truncatewords:155 }}
 	{% else %}
-		Welcome to the cushion store where you can buy comfy and awesome cushions.
+    The Graphics House
 	{% endif %}
 {% endblock %}
 {% block title %}
 	{% if category %}
-		{{ category.name }} - HolinessSingles
+		{{ category.name }} - The Graphics House
 	{% else %}
-    HolinessSingles
+    The Graphics House
 	{% endif %}
 {% endblock %}
 {% block content %}
@@ -69,7 +69,8 @@
         <!--======================================================== FACEBOOK SECTION ======================================================== -->
     <h1 class="facebookHeaderText">RECOMMENDED PAGES</h1>
         <div class="facebookSection">
-            <iframe src="https://www.facebook.com/plugins/group.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fdeeperlifebiblechurchsingles&width=300&show_social_context=true&show_metadata=true&appId=148660960575291&height=352" width="300" height="352" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>   
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FThe-Graphics-House-107859138255189%2F&tabs=timeline&width=300&height=352&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"  
+            width="300" height="352" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>        <section style="display: none;" id="newsLetterFacebook"  class="newsLetterFacebook homePageNewsLetterSection mb-5">
             <section style="display: none;" id="newsLetterFacebook"  class="newsLetterFacebook homePageNewsLetterSection mb-5">
                 <div class="homePageNewsLetterBackground">
                     <h1 class="text-center homePageNewsLetterHeader" >GET NOTIFIED WHEN WE POST SOMETHING NEW!</h1>
@@ -100,7 +101,7 @@
         <h1 style="padding-top: -10vh !important;" class=" homePageWhatH1">CONTRIBUTE</h1>
     
         <div class="homePageWhatRow">
-            <a href="#"><img class="homePageWhatImage" src="{% static 'images/DARA.png'%}"></a>
+            <a href="#"><img class="homePageWhatImage" src="{% static 'images/undraw_Investing_re_bov7.png'%}"></a>
             <p class="homePageWhatHeaderText ">
                     <a style="list-style-type: none; text-decoration: none; color: black;" href="#">
                          Want to contribute to our repetoire of posts? Come on along!
@@ -109,12 +110,12 @@
             </div> 
         
       
-    
+    <br>
     
         <!--======================================================== NEED TO REACH US SECTION ======================================================== -->
         <section id="reachUsWhatSection" style="display:none;" class=" homePageNeedReachUs homePageNeedReachUsMobile">
             <h1 class="homePageNeedReachUsH1 homePageNeedReachUsH1Mobile">NEED TO REACH US?</h1>
-            <p class="homePageNeedReachUsEmail homePageNeedReachUsEmailMobile"><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> HolinessSingles@gmail.com</span></p>
+            <p class="homePageNeedReachUsEmail homePageNeedReachUsEmailMobile"><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> wearethegraphicshouse@gmail.com</span></p>
             </section>
     </section>
     
@@ -144,14 +145,14 @@
             </div>
         </section>
     
-    
+    <br>
     
          
     
            <!--======================================================== NEED TO REACH US SECTION ======================================================== -->
            <section id="reachUsWhatSectionOriginal"  style="display:none;" class=" homePageNeedReachUs">
-            <h1 class="homePageNeedReachUsH1">NEED TO REACH US?</h1>
-            <p class="homePageNeedReachUsEmail "><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> HolinessSingles@gmail.com</span></p>
+            <br><h1 class="homePageNeedReachUsH1">NEED TO REACH US?</h1>
+            <p class="homePageNeedReachUsEmail "><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> wearethegraphicshouse@gmail.com</span></p>
             </section>
             
     </div>
