--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -2,7 +2,7 @@
 {% load static %} 
 {% block metadescription %} 
 {%endblock %} 
-{% block title %} HolinessSingles {% endblock %} 
+{% block title %} The Graphics House {% endblock %} 
 {% block content%}
 
 <link rel="stylesheet" href="{% static 'css/home.css' %}" />
@@ -53,8 +53,7 @@
  
  <h1 class="facebookHeaderText">RECOMMENDED PAGES</h1>
     <div class="facebookSection">
-            <iframe src="https://www.facebook.com/plugins/group.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fdeeperlifebiblechurchsingles&width=300&show_social_context=true&show_metadata=true&appId=148660960575291&height=352" width="300" height="352" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>   
-        <section style="display: none;" id="newsLetterFacebook"  class="newsLetterFacebook homePageNewsLetterSection mb-5">
+        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FThe-Graphics-House-107859138255189%2F&tabs=timeline&width=300&height=352&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="352" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>        <section style="display: none;" id="newsLetterFacebook"  class="newsLetterFacebook homePageNewsLetterSection mb-5">
             <div class="homePageNewsLetterBackground">
                 <h1 class="text-center homePageNewsLetterHeader" >GET NOTIFIED WHEN WE POST SOMETHING NEW!</h1>
                 <input class="text-gray homePageNewsLetterInput"  type="email" placeholder="Enter your email">
@@ -84,7 +83,7 @@
     <h1 style="padding-top: -10vh !important;" class=" homePageWhatH1">CONTRIBUTE</h1>
 
     <div class="homePageWhatRow">
-        <a href="#"><img class="homePageWhatImage" src="{% static 'images/DARA.png'%}"></a>
+        <a href="#"><img class="homePageWhatImage" src="{% static 'images/undraw_Investing_re_bov7.png'%}"></a>
         <p class="homePageWhatHeaderText ">
                 <a style="list-style-type: none; text-decoration: none; color: black;" href="#">
                      Want to contribute to our repetoire of posts? Come on along!
@@ -99,7 +98,7 @@
     <section id="reachUsWhatSection" style="display:none;" class=" homePageNeedReachUs homePageNeedReachUsMobile">
   
         <h1 class="homePageNeedReachUsH1 homePageNeedReachUsH1Mobile">NEED TO REACH US?</h1>
-        <p class="homePageNeedReachUsEmail homePageNeedReachUsEmailMobile"><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> HolinessSingles@gmail.com</span></p>
+        <p class="homePageNeedReachUsEmail homePageNeedReachUsEmailMobile"><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> wearethegraphicshouse@gmail.com</span></p>
         </section>
 </section>
 
@@ -137,8 +136,8 @@
        <br>
        <section id="reachUsWhatSectionOriginal"  style="display:none;" class=" homePageNeedReachUs">
         <br>
-        <h1 class="homePageNeedReachUsH1"><br>WANT TO REACH US?</h1>
-        <p class="homePageNeedReachUsEmail "><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> dHolinessSingles@gmail.com</span></p>
+        <h1 class="homePageNeedReachUsH1">WANT TO REACH US?</h1>
+        <p class="homePageNeedReachUsEmail "><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> wearethegraphicshouse@gmail.com</span></p>
         </section>
         
 </div>
