--- a/website/templates/website/post.html
+++ b/website/templates/website/post.html
@@ -38,7 +38,10 @@
 
                 <!-- https://developers.facebook.com/docs/plugins/share-button/ -->
 
-                <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fdeeperlifebiblechurchsingles%2F%3F__cft__[0]%3DAZW64t27v4lSZNTyrjqlLZH27XG_0jHhh4KvxXRSkx9cBDn8dOuBz_Y2Wnel3hlaORyGCrLG3G6qzxmG9rRirxtFLD6oo-qnzZMjr6qckAJZUMKtnLGWe6Malu7iqYamFtygtfV1hwQpWGhZ5wOY6ZOB6HJJsBNy_G6tL92-gAYG5z5jp37HYVwVCacWDM-zdH0%26__tn__%3D-UC%252CP-R&layout=button_count&size=small&appId=148660960575291&width=77&height=20" width="77" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fdeeperlifebiblechurchsingles%2F%3F__cft__
+                [0]%3DAZW64t27v4lSZNTyrjqlLZH27XG_0jHhh4KvxXRSkx9cBDn8dOuBz_Y2Wnel3hlaORyGCrLG3G6qzxmG
+                9rRirxtFLD6oo-qnzZMjr6qckAJZUMKtnLGWe6Malu7iqYamFtygtfV1hwQpWGhZ5wOY6ZOB6HJJsBNy_G6tL92-gAYG5z5jp37HYVwVCacWDM-zdH0
+                %26__tn__%3D-UC%252CP-R&layout=button_count&size=small&appId=148660960575291&width=77&height=20" width="77" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
                 <br>
                 <div class="labelContainer" >
@@ -71,21 +74,21 @@
 
                 <div class="otherTopicsLabelsContainer">
 
-                    <p class="otherTopicsLabelText">#love </p>
-                    <p class="otherTopicsLabelText">#love </p>
-                    <p class="otherTopicsLabelText">#love </p>
+                    <p class="otherTopicsLabelText">#banner </p>
+                    <p class="otherTopicsLabelText">#logo </p>
+                    <p class="otherTopicsLabelText">#albumCovers </p>
                 </div>
 
              </div>
 
              <div class="profileHoliness text-center">
-                <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/deeperLifeMarriages.png' %}" alt="Online Cushion Store">
-             <h6>HolinessSingles.com</h6>
-                <p class="profileHolinessText pt-2">We give hope to those waiting for thier life partners and a light to those who are in darkness. | Email: holinessSingles@gmail.com</p>
+                <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/footerLogo.png' %}" alt="Online Cushion Store">
+             <h6>TheGraphicsHouse.com</h6>
+                <p class="profileHolinessText pt-2">We aim to give you designs that you would love to have and make! Stay ahead with our designs by emailing us | Email: wearethegraphicshouse@gmail.com</p>
             <div class="profileHolinessMediaContainer ">
                 <p class="profileHolinessMedia"><i style="" class=" fab fa-facebook text-dark"></i></p>
-                <p class="profileHolinessMedia"><i style="" class=" fab fa-facebook text-dark"></i></p>
-                <p class="profileHolinessMedia"><i style="" class=" fab fa-facebook text-dark"></i></p>
+                <p class="profileHolinessMedia"><i style="" class=" fab fa-linkedin text-dark"></i></p>
+                <p class="profileHolinessMedia"><i style="" class=" fab fa-youtube text-dark"></i></p>
 
 
             </div>
@@ -140,8 +143,7 @@
         <!--======================================================== FACEBOOK SECTION ======================================================== -->
     <h1 class="facebookHeaderText">RECOMMENDED PAGES</h1>
         <div class="facebookSection">
-            <iframe src="https://www.facebook.com/plugins/group.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fdeeperlifebiblechurchsingles&width=300&show_social_context=true&show_metadata=true&appId=148660960575291&height=352" width="300" height="352" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>   
-            <section style="display: none;" id="newsLetterFacebook"  class="newsLetterFacebook homePageNewsLetterSection mb-5">
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FThe-Graphics-House-107859138255189%2F&tabs=timeline&width=300&height=352&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="352" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>             <section style="display: none;" id="newsLetterFacebook"  class="newsLetterFacebook homePageNewsLetterSection mb-5">
                 <div class="homePageNewsLetterBackground">
                     <h1 class="text-center homePageNewsLetterHeader" >GET NOTIFIED WHEN WE POST SOMETHING NEW!</h1>
                     <input class="text-gray homePageNewsLetterInput"  type="email" placeholder="Enter your email">
@@ -171,7 +173,7 @@
         <h1 style="padding-top: -10vh !important;" class=" homePageWhatH1">CONTRIBUTE</h1>
     
         <div class="homePageWhatRow">
-            <a href="#"><img class="homePageWhatImage" src="{% static 'images/DARA.png'%}"></a>
+            <a href="#"><img class="homePageWhatImage" src="{% static 'images/undraw_Investing_re_bov7.png'%}"></a>
             <p class="homePageWhatHeaderText ">
                     <a style="list-style-type: none; text-decoration: none; color: black;" href="#">
                          Want to contribute to our repetoire of posts? Come on along!
@@ -185,7 +187,7 @@
         <!--======================================================== NEED TO REACH US SECTION ======================================================== -->
         <section id="reachUsWhatSection" style="display:none;" class=" homePageNeedReachUs homePageNeedReachUsMobile">
             <h1 class="homePageNeedReachUsH1 homePageNeedReachUsH1Mobile">NEED TO REACH US?</h1>
-            <p class="homePageNeedReachUsEmail homePageNeedReachUsEmailMobile"><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> HolinessSingles@gmail.com</span></p>
+            <p class="homePageNeedReachUsEmail homePageNeedReachUsEmailMobile"><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> wearethegraphicshouse@gmail.com</span></p>
             </section>
     </section>
     
@@ -222,7 +224,7 @@
            <!--======================================================== NEED TO REACH US SECTION ======================================================== -->
            <section id="reachUsWhatSectionOriginal"  style="display:none;" class=" homePageNeedReachUs">
             <h1 class="homePageNeedReachUsH1">NEED TO REACH US?</h1>
-            <p class="homePageNeedReachUsEmail "><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> HolinessSingles@gmail.com</span></p>
+            <p class="homePageNeedReachUsEmail "><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> wearethegraphicshouse@gmail.com</span></p>
             </section>
             
     </div>
