--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -8,6 +8,16 @@
 	Create a New Account - Perfect Cushion Store
 {% endblock %}
 {% block content %}
+
+<link rel="stylesheet" href="{% static 'css/home.css' %}" />
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="{% static 'css/all.css' %}" />
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 	<div>
 		{% if not form.is_valid %}
 			<div class="mx-auto">
