--- a/static/css/home.css
+++ b/static/css/home.css
@@ -676,7 +676,7 @@
   }
 
   .facebookSection {
-    width: 30%;
+    /* width: 30%; */
   }
 
   
@@ -881,11 +881,11 @@ width: 100%;
   
 
   .homePageFacebookSection {
-    width: 40%;
+    /* width: 40%; */
   }
 
   .facebookSection {
-    width: 30%;
+    /* width: 30%; */
   }
 
   .facebookHeaderText {
@@ -1071,7 +1071,7 @@ width: 100%;
   }
   .secondSectionDesktop {
     
-    width: 45%;
+    width: 65%;
     padding-left: 8%;
     vertical-align: top;
     
@@ -1087,11 +1087,11 @@ width: 100%;
   
 
   .homePageFacebookSection {
-    width: 40%;
+    /* width: 40%; */
   }
 
   .facebookSection {
-    width: 30%;
+    /* width: 30%; */
   }
 
   .facebookHeaderText {
