--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -13,7 +13,7 @@
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" crossorigin="anonymous">
-    
+    <link rel="shortcut icon" type="image/jpg" href="assets/img/perfil.png"/>
   
     <title>{% block title %}{% endblock %}</title>
     <style>
