--- a/accounts/templates/signin.html
+++ b/accounts/templates/signin.html
@@ -1,49 +1,64 @@
-{% extends "base.html" %}
-{% load static %}
-{% load crispy_forms_tags %}
-{% block metadescription %}
-	Sign in and enjoy the variety of stunning and comfy cushions.
-{% endblock %}
-{% block title %}
-	Login - Perfect Cushion Store
-{% endblock %}
+{% extends "base.html" %} 
+{% load static %} 
+
+{% load crispy_forms_tags %} {%block metadescription %} 
+
+
+
+{% endblock %} 
+
+
+{% block title %} Login - The Graphics House 
+{%endblock %} 
+
+
 {% block content %}
 
 <link rel="stylesheet" href="{% static 'css/home.css' %}" />
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" />
+<link
+  href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap"
+  rel="stylesheet"
+/>
 
 <link rel="stylesheet" href="{% static 'css/all.css' %}" />
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com"> 
-<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-	<div class="container pb-4 mb-4">
-		<br>
-		<h1 class="my_title text-center">Login or Create a New Account</h1>
-		<br>
-		<div class="row">
-			<div class="col-12 col-sm-12 col-md-12 col-lg-6 text-center my_custom_div">
-				<br>
-				<h2 class="my_title">New Customer?</h2>
-				<br>
-				<a href="{% url 'signup' %}" class="btn btn-secondary">Create New Account</a>
-			</div>
-			<div class="col-12 col-sm-12 col-md-12 col-lg-6 bg-light">
-				<div>
-					<br>
-					<h2 class="my_title">Registered Customers Only</h2>
-					<form method="post">
-						{% csrf_token %}
-						<p>{{ form | crispy }}</p>
-						<button type="submit" class="btn btn-secondary">Login</button>
-					</form>
-					<br>
-				</div>
-				
-			</div>
-		</div>
-		<br>
-	</div>
-	<br>
+<link rel="preconnect" href="https://fonts.gstatic.com" />
+<link
+  href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap"
+  rel="stylesheet"
+/>
+<link rel="preconnect" href="https://fonts.gstatic.com" />
+<link
+  href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+  rel="stylesheet"
+/>
+<div class="container pb-4 mb-4">
+  <br />
+  <h1 class="my_title text-center">Login or Create a New Account</h1>
+  <br />
+  <div class="row">
+    <div class="col-12 col-sm-12 col-md-12 col-lg-6 text-center my_custom_div">
+      <br />
+      <h2 class="my_title">New User?</h2>
+      <br />
+      <a href="{% url 'signup' %}" class="btn btn-secondary"
+        >Create New Account</a
+      >
+    </div>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-6 bg-light">
+      <div>
+        <br />
+        <h2 class="my_title">Registered Users Only</h2>
+        <form method="post">
+          {% csrf_token %}
+          <p>{{ form | crispy }}</p>
+          <button type="submit" class="btn btn-secondary">Login</button>
+        </form>
+        <br />
+      </div>
+    </div>
+  </div>
+  <br />
+</div>
+<br />
 {% endblock %}
