--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block metadescription %}
-	Sign up to get a new account with us. The perfect cushion store has a variety of stunning and comfy cushions.
+	Sign Up
 {% endblock %}
 {% block title %}
 	Create a New Account - Perfect Cushion Store
