--- a/search_app/templates/search_app/search.html
+++ b/search_app/templates/search_app/search.html
@@ -3,8 +3,7 @@
 {% block metadescription %}
 {%endblock %} 
 {% block title %} The Graphics House {% endblock %} 
-{% block
-content %}
+{% block content %}
 
 <link rel="stylesheet" href="{% static 'css/home.css' %}" />
 <link rel="preconnect" href="https://fonts.gstatic.com" />
