--- a/static/css/post.css
+++ b/static/css/post.css
@@ -42,7 +42,7 @@
 }
   
   #navbarContent li a {
-    color: white;
+    color: black;
     font-size: 12px;
     text-transform: uppercase;
     font-family: sans-serif;
@@ -101,6 +101,7 @@ opacity: 60%;
   padding: 0 20px;
   text-transform: uppercase;
   font-size: 12px;
+  list-style-type: none;
 }
 .otherTopicsLabelsContainer{
 
@@ -136,6 +137,7 @@ opacity: 60%;
     }
     #navbarContent li a{
       font-size: 13px !important;
+      color: black;
     }
    
   
