--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -11,7 +11,7 @@
 
 		<section class="container footerAllItems">
 
-			<a class="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px; border-radius: 10px;" src="{% static 'images/footerLogo.png' %}" alt="Online Cushion Store"></a>
+			<a class="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px; border-radius: 10px;" src="{% static 'images/footlerLogo.png' %}" alt="Online Cushion Store"></a>
 			<div class="links">
 			 <a class="link" href="#">Home</a>
 			 <a class="link" href="#">About</a>
