--- a/website/templates/website/post.html
+++ b/website/templates/website/post.html
@@ -36,11 +36,13 @@
                 </h4>
 
                 <!-- https://developers.facebook.com/docs/plugins/share-button/ -->
+               
+<iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fchristian-jesus-graphics.herokuapp.com%2F{{post.category.slug}}%2F{{post.slug}}%2F&layout=button_count&size=small&width=77&height=20&appId" width="77" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
-                <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fdeeperlifebiblechurchsingles%2F%3F__cft__
+                <!-- <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fdeeperlifebiblechurchsingles%2F%3F__cft__
                 [0]%3DAZW64t27v4lSZNTyrjqlLZH27XG_0jHhh4KvxXRSkx9cBDn8dOuBz_Y2Wnel3hlaORyGCrLG3G6qzxmG
                 9rRirxtFLD6oo-qnzZMjr6qckAJZUMKtnLGWe6Malu7iqYamFtygtfV1hwQpWGhZ5wOY6ZOB6HJJsBNy_G6tL92-gAYG5z5jp37HYVwVCacWDM-zdH0
-                %26__tn__%3D-UC%252CP-R&layout=button_count&size=small&appId=148660960575291&width=77&height=20" width="77" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                %26__tn__%3D-UC%252CP-R&layout=button_count&size=small&appId=148660960575291&width=77&height=20" width="77" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe> -->
 
                 <br>
                 <div class="labelContainer" >
